<resources>
    <string name="app_name">Util App</string>
    <string name="text_util">UTIL</string>
    <string name="text_util2">A rede social diferente</string>
    <string name="text_versao1">v0.1 - Teste</string>
    <string name="text_equipe">Desenvolvido pela equipe Util App</string>
    <string name="img_view">img_logo</string>
    <string name="text_login">LOGIN</string>
    <string name="email_hint">Email</string>
    <string name="senha_hint">Senha</string>
    <string name="text_button_entrar">ENTRAR</string>
    <string name="text_cadastro">CADASTRAR-SE</string>
    <string name="text_cadastro2">CADASTRO</string>
    <string name="text_dados_cad">Informe seus dados para o cadastro</string>
    <string name="text_button_concluir">CONCLUIR</string>
    <string name="nome_hint">Nome de usuário</string>
    <string name="senha_cad_hint">Informe sua senha</string>
    <string name="senha2_cad_hint">Confirme sua senha</string>
    <string name="address_hint">Endereço</string>
    <string name="cep_hint">CEP (opcional)</string>
    <string name="text_ver_senha">Senha</string>
    <string name="text_credenciais">Salvar login</string>
    <string name="text_sair">SAIR</string>
    <string name="perfil">PERFIL</string>
    <string name="cursos">CURSOS</string>
    <string name="reels">REELS</string>
    <string name="usuario">Usuario</string>
    <string name="meus_dados">Meus dados</string>
    <string name="cursos_min">Cursos</string>
    <string name="amigos">Amigos</string>
    <string name="ver_todos">Ver todos</string>
    <string name="email">Email</string>
    <string name="endereco">Endereço</string>
    <string name="curso_1">Curso 1</string>
    <string name="curso_2">Curso 2</string>
    <string name="todo">TODO</string>
    <string name="design">DESIGN</string>
    <string name="fotografia">FOTOGRAFIA</string>
    <string name="t_i">T.I</string>
    <string name="outros">OUTROS</string>
    <string name="nome_do_usu_rio">Nome do Usuário</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="alterar_foto">Alterar foto</string>
    <string name="listar_todos">Listar Todos</string>
    <string name="descri_o">Descrição</string>
    <string name="n_categoria">Nº Categoria</string>
    <string name="nome_curso">Nome_Curso</string>
    <string name="_0">0</string>
    <string name="voltar">Voltar</string>
    <string name="novo_curso">Novo Curso</string>
    <string name="inserir_curso">Inserir Curso</string>
    <string name="insira_as_informa_es_sobre_o_curso">Insira as Informações sobre o curso</string>
    <string name="informe_o_numero_da_categoria">Informe o numero da categoria</string>
    <string name="nome_do_curso">Nome do curso</string>
    <string name="desri_o">Desrição</string>

    <string-array name="category">
        <item>Design</item>
        <item>Fotografia</item>
        <item>Tecnologia</item>
        <item>Outras</item>

    </string-array>


</resources>