<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainSplash">

    <ImageView
        android:id="@+id/id_img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_logo"
        android:contentDescription="@string/img_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"/>

    <TextView
        android:id="@+id/id_text_util"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_util"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/id_img_logo"/>

    <TextView
        android:id="@+id/id_text_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_util2"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/id_text_util"/>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#33000000"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txt_versao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_versao1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/text_equipe"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>